--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,12 @@
 version: '3.8'
 
-networks:
-  default:
-    name: nginxproxymanager
-    external: true
-
-
 services:
   wsgi:
     build: '.'
     container_name: manga_crawler_wsgi
     restart: always
+    ports:
+      - 80:80
     volumes:
       - .:/app
     environment:
