--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 beautifulsoup4==4.11.1
+cachelib==0.9.0
 certifi==2022.6.15
 charset-normalizer==2.1.0
 click==8.1.3
 cloudscraper==1.2.60
 colorama==0.4.5
 Flask==2.1.2
+Flask-Caching==2.0.0
 free-proxy==1.0.6
 idna==3.3
 itsdangerous==2.1.2
