--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Jinja2==3.1.2
 lxml==4.9.1
 MarkupSafe==2.1.1
 pyparsing==3.0.9
+python-dotenv==0.20.0
 requests==2.28.1
 requests-toolbelt==0.9.1
 soupsieve==2.3.2.post1
