--- a/requirements.txt
+++ b/requirements.txt
@@ -10,13 +10,12 @@ colorama==0.4.5
 Flask==2.1.2
 Flask-APScheduler==1.12.4
 Flask-Caching==2.0.0
-free-proxy==1.0.6
 idna==3.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
-joblib==1.1.0
 lxml==4.9.1
 MarkupSafe==2.1.1
+numpy==1.23.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
 python-dotenv==0.20.0
